[package]
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"
name = "logupgate"
version = "0.1.0"

[dependencies]
ff = "0.13"
group = "0.13"
# halo2 = {package = "halo2_proofs", path = "../../privacy-scaling-explorations/halo2/halo2_proofs", features = ["circuit-params"]}
halo2 = {package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", features = ["circuit-params"]}

[dev-dependencies]
ark-std = {version = "^0.4.0", features = ["print-trace"]}
rand = "0.8"
rand_core = {version = "0.6", default-features = false}

[features]
default = ["prover-sanity", "synth-sanity"]
info = []
prover-sanity = []
synth-sanity = []
